--- a/InovApi/composer.json
+++ b/InovApi/composer.json
@@ -17,7 +17,8 @@
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
-        "symfony/runtime": "5.4.*",
+        "symfony/runtime": "^6.0",
+        "symfony/security-bundle": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
