--- a/InovApi/config/packages/security.yaml
+++ b/InovApi/config/packages/security.yaml
@@ -15,8 +15,16 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            lazy: true
+            # lazy: true
             provider: app_user_provider
+            pattern: ^/api
+            stateless: true
+            json_login:
+                username_path: username
+                check_path: /api/authentication_token
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            jwt: ~
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
