--- a/InovApi/.env
+++ b/InovApi/.env
@@ -27,3 +27,13 @@ APP_SECRET=033c98cb01ceb0e887763b48b4ce3ee1
 DATABASE_URL="mysql://tonlogin:tonmdp@127.0.0.1:3306/InovAnglais?serverVersion=mariadb-10.3.29"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=fb7e1475c47ea8271f8c5c6988bfb6aa
+###< lexik/jwt-authentication-bundle ###
