--- a/InovApi/config/packages/security.yaml
+++ b/InovApi/config/packages/security.yaml
@@ -14,8 +14,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            # lazy: true
+        api: 
             provider: app_user_provider
 
             pattern: ^/api
@@ -26,7 +25,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
             jwt: ~
-
+        main:
+            # lazy: true
+            provider: app_user_provider
+            
             custom_authenticator: App\Security\AppCustomAuthenticator
             logout:
                 path: app_logout
