Ajout du profiler pour HTTP, debug de la page profil

--- a/InovApi/composer.json
+++ b/InovApi/composer.json
@@ -83,6 +83,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.48"
+        "symfony/maker-bundle": "^1.48",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
