--- a/InovApi/config/packages/security.yaml
+++ b/InovApi/config/packages/security.yaml
@@ -35,6 +35,8 @@ security:
                 # where to redirect after logout
                 # target: app_any_route
 
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
