fichier js ok, calcul du score ok, envoie du resultat ok

--- a/InovApi/.env
+++ b/InovApi/.env
@@ -29,7 +29,7 @@ DATABASE_URL="mysql://tonlogin:tonmdp@127.0.0.1:3306/InovAnglais?serverVersion=m
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
